--- a/IdentityServerTest/packages.config
+++ b/IdentityServerTest/packages.config
@@ -37,6 +37,7 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.3" targetFramework="net48" />
   <package id="Microsoft.Owin.Security" version="4.2.3" targetFramework="net48" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.2.3" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Jwt" version="4.2.3" targetFramework="net48" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.2.3" targetFramework="net48" />
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.2.3" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
